--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <main class="sprdr_main">
             <section class="sprdr-epilogue">
                 <div class="sprdr-con">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img1.webp" alt="ちぎりレタスの画像">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img2.webp" alt="スライス玉ねぎの画像">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img1.webp" alt="ちぎりレタスの写真">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img2.webp" alt="スライス玉ねぎの写真">
                 </div>
                 <h1>食卓に、春をひとさじ</h1>
                 <p>
@@ -63,24 +63,126 @@
                     味覚で感じてみませんか。
                 </p>
                 <div class="sprdr-con">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img3.webp" alt="2等分されたプチトマトの画像">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img4.webp" alt="レタスとレモンの画像">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img3.webp" alt="2等分されたプチトマトの写真">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img4.webp" alt="レタスとレモンの写真">
                 </div>
             </section>
             <section class="sprdr-detail">
-                <article class="sprdr-ninjin">
+                <article class="sprdr-carrot">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
                     <h2>
                         北野エースWEB SHOP<br>
                         人気No.1ドレッシング
                     </h2>
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-1.jpg" alt="大人のためのにんじんドレッシングの画像" class="sprdr-detail_img">
-                    <div class="sprdr-detail-copy">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-1.jpg" alt="大人のためのにんじんドレッシングの画像" class="sprdr_img">
+                    <div class="sprdr-copy">
                         <h3>大人のためのにんじんドレッシング</h3>
                         <p>国産にんじん素材本来の美味しさとすりおろし食感。深いコクを感じますが後味はさっぱりとしていて、お肉やお魚、冷奴、炒飯にかけても美味しく召し上がれます。WEB SHOPにて大人気のドレッシングです。</p>
                         <p>&yen; <span>746 </span>  税込</p>
-                        <div class="sprdr-detail-cta">
+                        <div class="sprdr-cta">
+                            <a href="">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sprdr-photo">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-2.webp" alt="ゆで卵に大人のためのにんじんドレッシングがかかっている様子">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-3.webp" alt="スライスにんじんの写真" class="sprdr-treat">
+                    </div>
+                </article>
+                <article class="sprdr-honey">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                    <h2>
+                        レモンの爽やかな香りと<br>
+                        塩糀の旨み
+                    </h2>
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-1.jpg" alt="はちみつレモンと塩糀のドレッシングの画像" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            はちみつレモンと<br>
+                            塩麹のドレッシング
+                        </h3>
+                        <p>具は国産のたまねぎ。レモン果汁と果皮の爽やかな香り、風味を加え、塩糀(こうじ)の旨みで全体のバランスをまとめました。生野菜、温野菜、しゃぶしゃぶなど、何にでも合う万能ドレッシングです。はちみつにより少し甘めに仕上げています。</p>
+                        <p>&yen; <span>647 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sprdr-photo">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-3.webp" alt="スライスレモンの写真" class="sprdr-treat">
+                    </div>
+                </article>
+                <article class="sprdr-hyuganatsu">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                    <h2>
+                        シャキシャキ食感と<br>
+                        上品な酸味と旨み
+                    </h2>
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-1.jpg" alt="はちみつレモンと塩糀のドレッシングの画像" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>日向夏ドレッシング</h3>
+                        <p>ひなたにふりそそぐ太陽の恵みで豊かに育った日向夏をまるごと使用。小さくカットした、日向夏の特徴である外皮と果肉の間にある白いふかふかした甘皮が入っているため、ほのかな甘味とシャキシャキした食感が楽しめます。上品で爽やかなドレッシングです。</p>
+                        <p>&yen; <span>470 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sprdr-photo">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-3.webp" alt="スライスレモンの写真" class="sprdr-treat">
+                    </div>
+                </article>
+                <article class="sprdr-onion">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                    <h2>
+                        贅沢な、<br>
+                        “ザ・たまねぎドレッシング”
+                    </h2>
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img4.jpg" alt="大人のための贅沢なノンオイルドレッシング和風たまねぎPremiumの画像" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            大人のための贅沢な<br>
+                            ノンオイルドレッシング<br>
+                            和風たまねぎ Premium
+                        </h3>
+                        <p>やわらかく、甘く、辛味成分が少ない淡路島産たまねぎを使用。ほとんど水を使用せずたまねぎの旨みを抽出した、贅沢なノンオイルドレッシングです。サラダはもちろん、お豆腐や肉料理のソースとしてもそのままお使いいただけます。</p>
+                        <p>&yen; <span>638 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                </article>
+                <article class="sprdr-french">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                    <h2>
+                        心地よいピリ辛が食欲をそそる<br>
+                        万能ドレッシング
+                    </h2>
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img5.jpg" alt="京都の祇園七味香るフレンチドレッシングの画像" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            京都の祇園七味香る<br>
+                            フレンチドレッシング
+                        </h3>
+                        <p>祇園七味とにんにくの風味を組み合わせ、マイルドに仕上げたフレンチドレッシングです。黄金一味の程よいピリ辛がローストビーフやカルパッチョ、ポテトサラダなど、さまざまな料理をグッと引き立ててます。</p>
+                        <p>&yen; <span>647 </span>  税込</p>
+                        <div class="sprdr-cta">
                             <a href="">
                                 <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
                                 商品を詳しく見る
