残りおすすめセクション(PC)のみ

--- a/upload.html
+++ b/upload.html
@@ -1,36 +1,288 @@
 <{$module.meta_up}>
-<meta name="description" content=""> <!-- ページの説明文 -->
-<!-- OGP -->
-<meta property="og:locale" content="ja_JP"> <!-- 言語 -->
-<meta property="og:type" content="website"> <!-- ページの種類 -->
-<meta property="og:url" content=""> <!-- ページのURL -->
-<meta property="og:title" content="｜【公式】北野エース公式通販"> <!-- ページのタイトル -->
-<meta property="og:description" content=""> <!-- ページの説明文 -->
-<meta property="og:image" content=""> <!-- 画像のURL -->
-<meta property="og:site_name" content=""> <!-- ホームページのタイトル -->
-<meta name="twitter:site" content=""> <!-- Xのアカウント名(@○○) -->
-<meta name="twitter:card" content="summary_large_image"> <!-- Xで表示される画像の種類 -->
-<title>｜北野エースWEB SHOP</title>
-<link rel="canonical" href=""> <!-- 正規URL -->
-<{$module.meta_center1}>
-<link rel="stylesheet" href="">
-<{$module.meta_center2}>
-<!-- GTM : スライドバナー -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NB98GKXV');</script>
-<!-- GTM : Clarity -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-MNFWKW8K');</script>
-<script src="" defer></script>
+    <meta name="description" content=""> <!-- ページの説明文 -->
+    <!-- OGP -->
+    <meta property="og:locale" content="ja_JP"> <!-- 言語 -->
+    <meta property="og:type" content="website"> <!-- ページの種類 -->
+    <meta property="og:url" content=""> <!-- ページのURL -->
+    <meta property="og:title" content="｜【公式】北野エース公式通販"> <!-- ページのタイトル -->
+    <meta property="og:description" content=""> <!-- ページの説明文 -->
+    <meta property="og:image" content=""> <!-- 画像のURL -->
+    <meta property="og:site_name" content=""> <!-- ホームページのタイトル -->
+    <meta name="twitter:site" content=""> <!-- Xのアカウント名(@○○) -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- Xで表示される画像の種類 -->
+    <title>(仮)春のドレッシング特集｜北野エースWEB SHOP</title>
+    <link rel="canonical" href=""> <!-- 正規URL -->
+    <{$module.meta_center1}>
+    <!-- Noto Sans JP : Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/css/style.css">
+    <style>
+        header .top-nav{
+            height:70px;
+        }
+        h1,h2,h3,p,li,a{
+            letter-spacing:.04em;
+            line-height:150%;
+        }
+        @media screen and (max-width:768px){
+            header .postage{
+                top:70px;
+            }
+        }
+    </style>
+    <{$module.meta_center2}>
+    <script src="" defer></script>
 <{$module.meta_down}>
 
 <body>
 
-    <!-- GTM : スライドバナー -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NB98GKXV"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- GTM : Clarity -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNFWKW8K"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <{$module.header}>
     <{$module.side_free}>
-    
+    <div class="sprdr-fv">
+        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_img.jpg" alt="春のドレッシング" class="sprdr-sp">
+        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_img.jpg" alt="春のドレッシング" class="sprdr-pc">
+    </div>
+    <main class="sprdr_main">
+        <section class="sprdr-epilogue">
+            <div class="sprdr-con">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img1.webp" alt="ちぎりレタスの写真">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img2.webp" alt="スライス玉ねぎの写真">
+            </div>
+            <div class="sprdr-copy">
+                <h1>食卓に、春をひとさじ</h1>
+                <p>
+                    フレッシュな春野菜で彩るサラダ。<br>
+                    ドレッシングを変えるだけで<br>
+                    サラダの可能性がぐんと広がります。<br>
+                    待ちわびた暖かな春の訪れを、<br>
+                    味覚で感じてみませんか。
+                </p>    
+            </div>
+            <div class="sprdr-con">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img3.webp" alt="2等分されたプチトマトの写真">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1_img4.webp" alt="レタスとレモンの写真">
+            </div>
+        </section>
+        <section class="sprdr-detail">
+            <article class="sprdr-carrot">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                <h2>
+                    北野エースWEB SHOP<br>
+                    人気No.1ドレッシング
+                </h2>
+                <div class="sprdr-flex">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-1.jpg" alt="" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>大人のためのにんじんドレッシング</h3>
+                        <p>国産にんじん素材本来の美味しさとすりおろし食感。深いコクを感じますが後味はさっぱりとしていて、お肉やお魚、冷奴、炒飯にかけても美味しく召し上がれます。WEB SHOPにて大人気のドレッシングです。</p>
+                        <p>&yen; <span>746 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="https://www.kitano-ace.jp/view/item/000000000254">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>    
+                </div>
+                <div class="sprdr-photo">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-2.webp" alt="ゆで卵に大人のためのにんじんドレッシングがかかっている様子" class="sprdr-sp">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/2_img1-2.webp" alt="ゆで卵に大人のためのにんじんドレッシングがかかっている様子" class="sprdr-pc">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-3.webp" alt="スライスにんじんの写真" class="sprdr-treat">
+                </div>
+            </article>
+            <article class="sprdr-honey">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                <h2>
+                    レモンの爽やかな香りと<br>
+                    塩糀の旨み
+                </h2>
+                <div class="sprdr-flex">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-1.jpg" alt="" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            はちみつレモンと<br>
+                            塩麹のドレッシング
+                        </h3>
+                        <p>具は国産のたまねぎ。レモン果汁と果皮の爽やかな香り、風味を加え、塩糀(こうじ)の旨みで全体のバランスをまとめました。生野菜、温野菜、しゃぶしゃぶなど、何にでも合う万能ドレッシングです。はちみつにより少し甘めに仕上げています。</p>
+                        <p>&yen; <span>647 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="https://www.kitano-ace.jp/view/item/000000001309">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sprdr-photo">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子" class="sprdr-sp">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/2_img2-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子" class="sprdr-pc">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-3.webp" alt="スライスレモンの写真" class="sprdr-treat">
+                </div>
+            </article>
+            <article class="sprdr-hyuganatsu">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                <h2>
+                    シャキシャキ食感と<br>
+                    上品な酸味と旨み
+                </h2>
+                <div class="sprdr-flex">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-1.jpg" alt="" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>日向夏ドレッシング</h3>
+                        <p>ひなたにふりそそぐ太陽の恵みで豊かに育った日向夏をまるごと使用。小さくカットした、日向夏の特徴である外皮と果肉の間にある白いふかふかした甘皮が入っているため、ほのかな甘味とシャキシャキした食感が楽しめます。上品で爽やかなドレッシングです。</p>
+                        <p>&yen; <span>470 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="https://www.kitano-ace.jp/view/item/000000001042">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sprdr-photo">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子" class="sprdr-sp">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/2_img3-2.webp" alt="菜の花とアスパラガスとじゃがいものサラダにはちみつレモンと塩糀のドレッシングがかかっている様子" class="sprdr-pc">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-3.webp" alt="スライスレモンの写真" class="sprdr-treat">
+                </div>
+            </article>
+            <article class="sprdr-onion">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                <h2>
+                    贅沢な、<br>
+                    “ザ・たまねぎドレッシング”
+                </h2>
+                <div class="sprdr-flex">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img4.jpg" alt="" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            大人のための贅沢な<br>
+                            ノンオイルドレッシング<br>
+                            和風たまねぎ Premium
+                        </h3>
+                        <p>やわらかく、甘く、辛味成分が少ない淡路島産たまねぎを使用。ほとんど水を使用せずたまねぎの旨みを抽出した、贅沢なノンオイルドレッシングです。サラダはもちろん、お豆腐や肉料理のソースとしてもそのままお使いいただけます。</p>
+                        <p>&yen; <span>638 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="https://www.kitano-ace.jp/view/item/000000000618">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>    
+                </div>
+            </article>
+            <article class="sprdr-french">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
+                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                <h2>
+                    心地よいピリ辛が食欲をそそる<br>
+                    万能ドレッシング
+                </h2>
+                <div class="sprdr-flex">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img5.jpg" alt="" class="sprdr_img">
+                    <div class="sprdr-copy">
+                        <h3>
+                            京都の祇園七味香る<br>
+                            フレンチドレッシング
+                        </h3>
+                        <p>祇園七味とにんにくの風味を組み合わせ、マイルドに仕上げたフレンチドレッシングです。黄金一味の程よいピリ辛がローストビーフやカルパッチョ、ポテトサラダなど、さまざまな料理をグッと引き立ててます。</p>
+                        <p>&yen; <span>647 </span>  税込</p>
+                        <div class="sprdr-cta">
+                            <a href="https://www.kitano-ace.jp/view/item/000000001600">
+                                <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                商品を詳しく見る
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="sprdr-recommend">
+            <h2>おすすめ商品</h2>
+            <ul>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000001201">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1.jpg" alt="">
+                        <h3>大人のための贅沢なごまドレッシング</h3>
+                        <p>&yen;<span>681</span> (税込)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000001051">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2.jpg" alt="">
+                        <h3>ごま油と塩にんにくの芳醇ドレッシング</h3>
+                        <p>&yen;<span>647</span> (税込)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000001288">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/3.jpg" alt="">
+                        <h3>玉ねぎのクリーミーフレンチドレッシング</h3>
+                        <p>&yen;<span>465</span> (税込)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000001341">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/4.jpg" alt="">
+                        <h3>和風シーザードレッシング</h3>
+                        <p>&yen;<span>647</span> (税込)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000000282">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/5.jpg" alt="">
+                        <h3>大人のためのシーザードレッシング</h3>
+                        <p>&yen;<span>594</span> (税込)</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.kitano-ace.jp/view/item/000000000761">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/6.jpg" alt="">
+                        <h3>大人のためのたまねぎドレッシング</h3>
+                        <p>&yen;<span>746</span> (税込)</p>
+                    </a>
+                </li>
+            </ul>
+            <div class="sprdr-cta">
+                <a href="https://www.kitano-ace.jp/view/category/dressing-oil">ドレッシングをもっと見る</a>
+            </div>
+    </section>
+    <section class="sprdr-recommend">
+        <h2>おすすめの特集</h2>
+        <ul>
+            <li>
+                <a href="https://www.kitano-ace.jp/view/category/kitanoselection">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/7.webp" alt="">
+                    <h3>キタノセレクション</h3>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.kitano-ace.jp/view/page/currybook">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/8.webp" alt="">
+                    <h3>カレーなる本棚&reg;</h3>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.kitano-ace.jp/view/page/onoeukon-kyettharhinspicy">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/9.webp" alt="">
+                    <h3>麻辣チェッターヒン</h3>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.kitano-ace.jp/view/page/onoeukon">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/10.webp" alt="">
+                    <h3>尾上右近さんおすすめカレー11選</h3>
+                </a>
+            </li>
+        </ul>
+        <div class="sprdr-cta">
+            <a href="https://www.kitano-ace.jp/view/category/ct173">特集をもっと見る</a>
+        </div>
+    </section>
+    </main>
     <{$module.footer}>
 
 <{$makeshop.body_bottom}>
