--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <a href="https://www.kitano-ace.jp/view/category/dressing-oil">ドレッシングをもっと見る</a>
                 </div>
         </section>
-        <section class="sprdr-recommend">
+        <section class="sprdr-recommend sprdr-lp">
             <h2>おすすめの特集</h2>
             <ul>
                 <li>
