--- a/upload.html
+++ b/upload.html
@@ -15,21 +15,8 @@
     <{$module.meta_center1}>
     <!-- Noto Sans JP : Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/css/style.css">
-    <style>
-        header .top-nav{
-            height:70px;
-        }
-        h1,h2,h3,p,li,a{
-            letter-spacing:.04em;
-            line-height:150%;
-        }
-        @media screen and (max-width:768px){
-            header .postage{
-                top:70px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/css/style4.css">
+    <style>h1,h2,h3,p,li,a{letter-spacing:.04em;line-height:150%;}header .top-nav{height:70px;}header .nav-menu a,html body .nd .nd_container .nd_search li input,html body .nd .nd_container .nd_search li select,header .postage p,.footer-nav li a,.footer-text span,.copyright{letter-spacing:0;line-height:1.6;}header .postage p{font-size:13px;}.footer-nav li a,.footer-text,.footer-text span{font-size:14px;}.copyright{font-size:12px;}@media screen and (min-width:768px){.sprdr-fv{margin-top:140px;}.nav-contact li,.bnav li a,.category-button,.tokushu-button{font-size:14px;letter-spacing:0;line-height:1.6;}.footer-text{letter-spacing:0;}}</style>
     <{$module.meta_center2}>
     <script src="" defer></script>
 <{$module.meta_down}>
@@ -250,7 +237,7 @@
                 <a href="https://www.kitano-ace.jp/view/category/dressing-oil">ドレッシングをもっと見る</a>
             </div>
     </section>
-    <section class="sprdr-recommend">
+    <section class="sprdr-recommend sprdr-lp">
         <h2>おすすめの特集</h2>
         <ul>
             <li>
