残りメタ情報のみ

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <div class="sprdr_header">Header</div>
         <div class="sprdr_header-bg"></div>
         <div class="sprdr-fv">
-            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_img.jpg" alt="春のドレッシング" class="sprdr-sp">
-            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_img.jpg" alt="春のドレッシング" class="sprdr-pc">
+            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-sp">
+            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-pc">
+            <h1><img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_title.svg" alt="春のドレッシング特集"></h1>
         </div>
         <main class="sprdr_main">
             <section class="sprdr-epilogue">
@@ -43,20 +44,20 @@
             <section class="sprdr-detail">
                 <article class="sprdr-carrot">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text-blue.svg" alt="" class="sprdr-bg-text">
                     <h2>
                         北野エースWEB SHOP<br>
                         人気No.1ドレッシング
                     </h2>
                     <div class="sprdr-flex">
-                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-1.jpg" alt="" class="sprdr_img">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img1-1.webp" alt="" class="sprdr_img">
                         <div class="sprdr-copy">
                             <h3>大人のためのにんじんドレッシング</h3>
                             <p>国産にんじん素材本来の美味しさとすりおろし食感。深いコクを感じますが後味はさっぱりとしていて、お肉やお魚、冷奴、炒飯にかけても美味しく召し上がれます。WEB SHOPにて大人気のドレッシングです。</p>
                             <p>&yen; <span>746 </span>  税込</p>
                             <div class="sprdr-cta">
                                 <a href="https://www.kitano-ace.jp/view/item/000000000254">
-                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check-re.svg" alt="">
                                     商品を詳しく見る
                                 </a>
                             </div>
@@ -70,13 +71,13 @@
                 </article>
                 <article class="sprdr-honey">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text-green.svg" alt="" class="sprdr-bg-text">
                     <h2>
                         レモンの爽やかな香りと<br>
                         塩糀の旨み
                     </h2>
                     <div class="sprdr-flex">
-                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-1.jpg" alt="" class="sprdr_img">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img2-1.webp" alt="" class="sprdr_img">
                         <div class="sprdr-copy">
                             <h3>
                                 はちみつレモンと<br>
@@ -86,7 +87,7 @@
                             <p>&yen; <span>647 </span>  税込</p>
                             <div class="sprdr-cta">
                                 <a href="https://www.kitano-ace.jp/view/item/000000001309">
-                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check-re.svg" alt="">
                                     商品を詳しく見る
                                 </a>
                             </div>
@@ -100,20 +101,20 @@
                 </article>
                 <article class="sprdr-hyuganatsu">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text-blue.svg" alt="" class="sprdr-bg-text">
                     <h2>
                         シャキシャキ食感と<br>
                         上品な酸味と旨み
                     </h2>
                     <div class="sprdr-flex">
-                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-1.jpg" alt="" class="sprdr_img">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img3-1.webp" alt="" class="sprdr_img">
                         <div class="sprdr-copy">
                             <h3>日向夏ドレッシング</h3>
                             <p>ひなたにふりそそぐ太陽の恵みで豊かに育った日向夏をまるごと使用。小さくカットした、日向夏の特徴である外皮と果肉の間にある白いふかふかした甘皮が入っているため、ほのかな甘味とシャキシャキした食感が楽しめます。上品で爽やかなドレッシングです。</p>
                             <p>&yen; <span>470 </span>  税込</p>
                             <div class="sprdr-cta">
                                 <a href="https://www.kitano-ace.jp/view/item/000000001042">
-                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check-re.svg" alt="">
                                     商品を詳しく見る
                                 </a>
                             </div>
@@ -127,13 +128,13 @@
                 </article>
                 <article class="sprdr-onion">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-green.svg" alt="" class="sprdr-bg">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text2.webp" alt="" class="sprdr-bg-text">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text-green.svg" alt="" class="sprdr-bg-text">
                     <h2>
                         贅沢な、<br>
                         “ザ・たまねぎドレッシング”
                     </h2>
                     <div class="sprdr-flex">
-                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img4.jpg" alt="" class="sprdr_img">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img4.webp" alt="" class="sprdr_img">
                         <div class="sprdr-copy">
                             <h3>
                                 大人のための贅沢な<br>
@@ -144,7 +145,7 @@
                             <p>&yen; <span>638 </span>  税込</p>
                             <div class="sprdr-cta">
                                 <a href="https://www.kitano-ace.jp/view/item/000000000618">
-                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check-re.svg" alt="">
                                     商品を詳しく見る
                                 </a>
                             </div>
@@ -153,13 +154,13 @@
                 </article>
                 <article class="sprdr-french">
                     <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_bg-blue.svg" alt="" class="sprdr-bg">
-                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text1.webp" alt="" class="sprdr-bg-text">
+                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_text-blue.svg" alt="" class="sprdr-bg-text">
                     <h2>
                         心地よいピリ辛が食欲をそそる<br>
                         万能ドレッシング
                     </h2>
                     <div class="sprdr-flex">
-                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img5.jpg" alt="" class="sprdr_img">
+                        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_img5.webp" alt="" class="sprdr_img">
                         <div class="sprdr-copy">
                             <h3>
                                 京都の祇園七味香る<br>
@@ -169,7 +170,7 @@
                             <p>&yen; <span>647 </span>  税込</p>
                             <div class="sprdr-cta">
                                 <a href="https://www.kitano-ace.jp/view/item/000000001600">
-                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check.webp" alt="">
+                                    <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2_check-re.svg" alt="">
                                     商品を詳しく見る
                                 </a>
                             </div>
@@ -182,42 +183,42 @@
                 <ul>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000001201">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/1.webp" alt="">
                             <h3>大人のための贅沢なごまドレッシング</h3>
                             <p>&yen;<span>681</span> (税込)</p>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000001051">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/2.webp" alt="">
                             <h3>ごま油と塩にんにくの芳醇ドレッシング</h3>
                             <p>&yen;<span>647</span> (税込)</p>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000001288">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/3.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/3.webp" alt="">
                             <h3>玉ねぎのクリーミーフレンチドレッシング</h3>
                             <p>&yen;<span>465</span> (税込)</p>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000001341">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/4.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/4.webp" alt="">
                             <h3>和風シーザードレッシング</h3>
                             <p>&yen;<span>647</span> (税込)</p>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000000282">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/5.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/5.webp" alt="">
                             <h3>大人のためのシーザードレッシング</h3>
                             <p>&yen;<span>594</span> (税込)</p>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.kitano-ace.jp/view/item/000000000761">
-                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/6.jpg" alt="">
+                            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/6.webp" alt="">
                             <h3>大人のためのたまねぎドレッシング</h3>
                             <p>&yen;<span>746</span> (税込)</p>
                         </a>
