--- a/upload.html
+++ b/upload.html
@@ -1,24 +1,21 @@
 <{$module.meta_up}>
-    <meta name="description" content=""> <!-- ページの説明文 -->
+    <meta name="description" content="北野エースの豊富なドレッシングの中から春におすすめをセレクト。栄養満点の春野菜をより美味しく。ドレッシングを変えるだけでサラダの可能性はぐんと広がります。">
     <!-- OGP -->
-    <meta property="og:locale" content="ja_JP"> <!-- 言語 -->
-    <meta property="og:type" content="website"> <!-- ページの種類 -->
-    <meta property="og:url" content=""> <!-- ページのURL -->
-    <meta property="og:title" content="｜【公式】北野エース公式通販"> <!-- ページのタイトル -->
-    <meta property="og:description" content=""> <!-- ページの説明文 -->
-    <meta property="og:image" content=""> <!-- 画像のURL -->
-    <meta property="og:site_name" content=""> <!-- ホームページのタイトル -->
-    <meta name="twitter:site" content=""> <!-- Xのアカウント名(@○○) -->
-    <meta name="twitter:card" content="summary_large_image"> <!-- Xで表示される画像の種類 -->
-    <title>(仮)春のドレッシング特集｜北野エースWEB SHOP</title>
-    <link rel="canonical" href=""> <!-- 正規URL -->
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.kitano-ace.jp/view/page/spring-dressing">
+    <meta property="og:title" content="春のドレッシング｜北野エースWEB SHOP">
+    <meta property="og:description" content="北野エースの豊富なドレッシングの中から春におすすめをセレクト。栄養満点の春野菜をより美味しく。ドレッシングを変えるだけでサラダの可能性はぐんと広がります。">
+    <meta property="og:image" content="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/ogp.webp">
+    <meta property="og:site_name" content="春のドレッシング｜北野エースWEB SHOP">
+    <title>春のドレッシング｜北野エースWEB SHOP</title>
+    <link rel="canonical" href="https://www.kitano-ace.jp/view/page/spring-dressing">
     <{$module.meta_center1}>
     <!-- Noto Sans JP : Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/css/style9.css">
+    <link rel="stylesheet" href="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/css/style10.css">
     <style>html body{overflow-x:hidden;}h1,h2,h3,p,li,a{letter-spacing:.04em;line-height:150%;}header .top-nav{height:70px;}header .nav-menu a,html body .nd .nd_container .nd_search li input,html body .nd .nd_container .nd_search li select,header .postage p,.footer-nav li a,.footer-text span,.copyright{letter-spacing:0;line-height:1.6;}header .postage p{font-size:13px;}.footer-nav li a,.footer-text,.footer-text span{font-size:14px;}.copyright{font-size:12px;}@media screen and (min-width:768px){.sprdr-fv{margin-top:140px;}.nav-contact li,.bnav li a,.category-button,.tokushu-button{font-size:14px;letter-spacing:0;line-height:1.6;}.footer-text{letter-spacing:0;}}html body .sprdr_main .sprdr-detail article .sprdr-copy .sprdr-cta a:hover{opacity:1;}</style>
     <{$module.meta_center2}>
-    <script src="" defer></script>
 <{$module.meta_down}>
 
 <body>
@@ -26,9 +23,10 @@
     <{$module.header}>
     <{$module.side_free}>
     <div class="sprdr-fv">
-        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-sp">
-        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-pc">
-        <h1><img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_title.svg" alt="春のドレッシング特集"></h1>
+        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_bg.jpg" alt="フレッシュなサラダの背景写真" class="sprdr-sp">
+        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_bg.jpg" alt="フレッシュなサラダの背景写真" class="sprdr-pc">
+        <h1><img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_title.svg" alt="春のドレッシング"></h1>
+        <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_items.webp" alt="春におすすめのドレッシングが5商品並んでいる様子" class="sprdr_img">
     </div>
     <main class="sprdr_main">
         <section class="sprdr-epilogue">
@@ -41,7 +39,7 @@
                 <p>
                     フレッシュな春野菜で彩るサラダ。<br>
                     ドレッシングを変えるだけで<br>
-                    サラダの可能性がぐんと広がります。<br>
+                    サラダの可能性はぐんと広がります。<br>
                     待ちわびた暖かな春の訪れを、<br>
                     味覚で感じてみませんか。
                 </p>    
