--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>(仮)春のドレッシング特集｜北野エースWEB SHOP</title>
+        <title>春のドレッシング｜北野エースWEB SHOP</title>
         <!-- Noto Sans JP : Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./assets/css/style.css">
         <style>.sprdr_header{width:100vw;height:97.5px;background-color:#FFFFFF;position:fixed;top:0;left:0;z-index:9999;}.sprdr_header-bg{width:100vw;height:97.5px;}.sprdr_footer{width:100vw;height:calc(100vh - 97.5px);background-color:#E6E6E6;}@media screen and (min-width:768px){.sprdr_header{height:146.5px;}.sprdr_header-bg{height:146.5px;}.sprdr_footer{height:calc(100vh - 146.5px);}}</style>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" defer></script>
-        <script src="./assets/js/script.js" defer></script>    
     </head>
     <body>
 
         <div class="sprdr_header">Header</div>
         <div class="sprdr_header-bg"></div>
         <div class="sprdr-fv">
-            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-sp">
-            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_img-re.jpg" alt="フレッシュなサラダを背景に、春におすすめのドレッシングが5本並んでいる様子" class="sprdr-pc">
-            <h1><img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_title.svg" alt="春のドレッシング特集"></h1>
+            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_bg.jpg" alt="フレッシュなサラダの背景写真" class="sprdr-sp">
+            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/responsive/0_bg.jpg" alt="フレッシュなサラダの背景写真" class="sprdr-pc">
+            <h1><img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_title.svg" alt="春のドレッシング"></h1>
+            <img src="https://gigaplus.makeshop.jp/kitanoace/13_spring-dressing/assets/img/0_items.webp" alt="春におすすめのドレッシングが5商品並んでいる様子" class="sprdr_img">
         </div>
         <main class="sprdr_main">
             <section class="sprdr-epilogue">
@@ -31,7 +31,7 @@
                     <p>
                         フレッシュな春野菜で彩るサラダ。<br>
                         ドレッシングを変えるだけで<br>
-                        サラダの可能性がぐんと広がります。<br>
+                        サラダの可能性はぐんと広がります。<br>
                         待ちわびた暖かな春の訪れを、<br>
                         味覚で感じてみませんか。
                     </p>    
